<resources>
    <string name="app_name">SmartBreath</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_about_us">Welcome to About US</string>
    <string name="welcome_to_protocol">Welcome to protocol</string>
    <string name="welcome_to_dashboard">Welcome to Dashboard</string>
    <string name="running">RUNNING</string>
    <string name="_1000">1000</string>
    <string name="name">NAME</string>
    <string name="start">Start</string>
    <string name="about_us">About Us</string>
    <string name="cancel">Cancel</string>
    <string name="protocol_info">Protocol info</string>
    <string name="dashboard">Dashboard</string>
</resources>
