<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="61dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imageView"
        android:text="@string/_1000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="61dp"
        android:text="@string/running"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="28dp"
        android:background="#ffffff"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="117dp"
        android:layout_marginBottom="100dp">

        <Button

            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:layout_weight="1"
            android:onClick="changeFragment"/>


        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol_info"
            android:layout_weight="1"
            android:onClick="changeFragment"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:layout_weight="1"
            android:onClick="changeFragment"
            />

    </LinearLayout>

    <fragment
        android:id="@+id/fragment_palce"
        android:name="com.example.siddhiworld.smartbreath.Dashboard"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"
        android:layout_alignParentLeft="true"
        tools:ignore="RtlCompat"></fragment>



    <Button

        android:id="@+id/btn_4"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_5"
        android:layout_marginStart="50dp"
        android:text="@string/start"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp" />

    <Button

        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="86dp"
        android:text="@string/cancel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="86dp" />





</RelativeLayout>